--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.2.3
   table_calendar: ^3.1.1
+  flutter_local_notifications: ^17.1.2
+  google_fonts: ^6.2.1
+  timezone: ^0.9.3
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +54,18 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+
+flutter_native_splash:
+ color: "f887c6"
+ image:  "assets/icon/icon.png"
+ android: true
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
