--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   timezone: ^0.10.0
   flutter_launcher_icons: ^0.14.1
   flutter_native_splash: ^2.4.0
+  flex_color_picker: ^3.6.0
+  provider: ^6.1.2
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
