--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flex_color_picker: ^3.6.0
   provider: ^6.1.2
   flutter_secure_storage: ^9.2.2
+  flutter_timezone: ^3.0.1
 
 dev_dependencies:
   flutter_test:
