--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,3 +1,6 @@
+synthetic-package: false
+
 arb-dir: lib/l10n
 template-arb-file: app_en.arb
+output-dir: lib/src/i18n/generated
 output-localization-file: app_localizations.dart
