--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: daily_checker_reminder
-description: "A new Flutter project."
+description: "Check your daily activities!"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.7
+version: 1.1.0
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
@@ -43,7 +43,7 @@ dependencies:
   timezone: ^0.10.0
   flex_color_picker: ^3.6.0
   provider: ^6.1.2
-  flutter_secure_storage: ^9.2.2
+  sqflite: ^2.4.2
   flutter_timezone: ^3.0.1
   flutter_native_splash: ^2.4.4
   flutter_localizations:
